# obsidian_bot

./: README.md  bot.py  bot_commands.md  pyproject.toml
